--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-#############
-# Mac Files #
-#############
-.DS_Store
-.Trashes
-.Spotlight-V100
-.idea
-
-*.scpt
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
