--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Kevin Funderburg
-email: ksfunderburg@icloud.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://kevin-funderburg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  kevin-funderburg
-
+title: Cool Title
+description: Cool description
 # Build settings
 theme: jekyll-theme-midnight
 plugins:
