--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Kevin Funderburg
-description: My Portfolio.
+title: Hi there!
+description: Welcome to my portfolio!
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
